--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,36 +2,71 @@
 
 {% block content %}
 
-    <div class="col-md-6 offset-md-3">
-
         {% if user.is_authenticated %}
 
-            <h1>Hello World!</h1>
+            <table class="table table-striped table-hover table-bordered ">
+                <thead class="table-dark">
+                  <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">City</th>
+                    <th scope="col">State</th>
+                    <th scope="col">Zipcode</th>
+                    <th scope="col">Created At</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">Details</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  
+                    {% if records %}
+
+                        {% for record in records %}
+                        <tr>
+                            <td>{{ record.first_name }} {{ record.last_name }}</td>
+                            <td>{{ record.email }}</td>
+                            <td>{{ record.phone }}</td>
+                            <td>{{ record.address }}</td>
+                            <td>{{ record.city }}</td>
+                            <td>{{ record.state }}</td>
+                            <td>{{ record.zipcode }}</td>
+                            <td>{{ record.created_at }}</td>
+                            <td>{{ record.id }}</td>
+                            <td><a href="{% url 'record' record.id %}">view</a></td>
+                        </tr>
+                        {% endfor %}
+
+                    {% endif %}
+                  
+                </tbody>
+              </table>
+
+            
         
         {% else %}
 
-        <h1>Login</h1>
-        <br />
-        <form method="POST" action="{% url 'home' %}">
+        <div class="col-md-6 offset-md-3">
+            <h1>Login</h1>
+            <br />
+            <form method="POST" action="{% url 'home' %}">
 
-            {% csrf_token %}
+                {% csrf_token %}
 
-            <form>
                 <div class="mb-3">
-                  <input type="text" class="form-control" name="username" placeholder="Kullanıcı adı" required>
+                    <input type="text" class="form-control" name="username" placeholder="Kullanıcı adı" required>
                 </div>
                 <br />
                 <div class="mb-3">
-                  <input type="password" class="form-control" name="password" placeholder="Şifre" required>
+                    <input type="password" class="form-control" name="password" placeholder="Şifre" required>
                 </div>
                 <br />
                 <button type="submit" class="btn btn-secondary">Login</button>
-            </form>
 
-        </form>
+            </form>
+        </div>
 
         {% endif %}
-    
-    </div>
 
 {% endblock %}
